[package]
name = "dllup-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.5"
lazy_static = "1"
shell-words = "1.1"
inkjet = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
rexif = "0.7"
roxmltree = "0.19"
ureq = "2.9"
thiserror = "1"
time = { version = "0.3", default-features = false, features = ["formatting"] }
git2 = "0.20.2"
serde-xml-rs = "0.8.1"

[dev-dependencies]
tempfile = "3"

[features]
default = []
